--- a/webapp/assets/includes/custom.css
+++ b/webapp/assets/includes/custom.css
@@ -14,7 +14,7 @@ body {
 }
 
 
-.grid {
+.ui.equal.width.center.aligned.grid {
     height: 100%;
 }
 
@@ -32,11 +32,11 @@ a.column {
     height: 80px;
 }
 
-.ui.negative.button {
+.ui.negative.button, .ui.negative.button:hover {
     background-color: #CF322D;
 }
 
-.ui.positive.button {
+.ui.positive.button, .ui.positive.button:hover {
 
     background-color: #68863F;
 }
