--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,3 +25,45 @@
     background-color: black;
     font-size: 20px;
 }
+
+.wide.column, .wide.column:hover {
+    height:300px;
+    color:white;
+    border-style:solid;
+    border-width:10px;
+    border-color:white;
+}
+
+
+.column img {
+    height:100%;
+    width:100%;
+}
+
+.ui.equal.width.center.aligned.grid {
+    margin:20px;
+}
+
+.ui.secondary.inverted.menu {
+    background-color: rgba(0,85,166,1);
+}
+
+#YRL {
+    background-color: rgba(0,85,166,1);
+}
+
+#BL {
+    background-color: rgba(0,165,229,1);
+}
+
+#POWELL {
+    background-color: rgba(0,85,166,1);
+}
+
+#AL {
+    background-color: rgba(0,165,229,1);
+}
+
+#ML {
+    background-color: rgba(0,85,166,1);
+}
