--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,3 +67,27 @@
 #ML {
     background-color: rgba(0,85,166,1);
 }
+
+#sec1 {
+    background-color: rgba(0,85,166,1);
+}
+
+#sec2 {
+    background-color: rgba(0,165,229,1);
+}
+
+#sec3 {
+    background-color: rgba(0,165,229,1);
+}
+
+#sec4 {
+    background-color: rgba(0,85,166,1);
+}
+
+#sec5 {
+    background-color: rgba(0,85,166,1);
+}
+
+#sec6 {
+    background-color: rgba(0,165,229,1);
+}
