--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,6 +24,14 @@ font-weight: bold;
 
 }
 
+.darken {
+  background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    );
+}
+
 .column {
     font-size: 50px;
     line-height: 90px;
